--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-OPENAI_API_KEY=sua_chave_openai_aqui
+# OpenAI API Configuration (REQUIRED)
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# Model Configuration (OPTIONAL - defaults shown)
+MODEL_NAME=gpt-4o-mini
+TEMPERATURE=0.5
