--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
-# OpenAI API Configuration (REQUIRED)
-OPENAI_API_KEY=sk-your-openai-api-key-here
+# OpenAI API Configuration
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
 
-# Model Configuration (OPTIONAL - defaults shown)
-MODEL_NAME=gpt-4o-mini
-TEMPERATURE=0.5
+# Database Configuration (optional)
+# Default: data/conversations.db
+# DB_PATH=data/conversations.db
+
+# Model Configuration (optional)
+# Default: gpt-4o-mini
+# Available models: gpt-4o, gpt-4o-mini, gpt-4-turbo, etc.
+# MODEL_NAME=gpt-4o-mini
+
+# Temperature Configuration (optional)
+# Controls creativity: 0.0 = deterministic, 2.0 = very creative
+# Default: 0.5
+# Must be between 0.0 and 2.0
+# TEMPERATURE=0.5
