--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       # Mount source code for development (optional - remove in production)
       - ./src:/app/src:ro
       - ./agent.py:/app/agent.py:ro
+      # Mount tests directory for running tests
+      - ./tests:/app/tests:ro
+      - ./pytest.ini:/app/pytest.ini:ro
       # Mount data directory to persist database
       - ./data:/app/data
       # Mount .env file for environment variables (if exists)
