Update .env.example and DOCUMENTATION.md

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,13 @@
 # Get your API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Database Configuration (optional)
+# Conversation database Configuration (optional)
 # Default: data/conversations.db
-# DB_PATH=data/conversations.db
+# CONVERSATION_DB_PATH=data/conversations.db
+
+# Checkpoint database Configuration (optional)
+# Default: data/checkpoints.db
+# CHECKPOINT_DB_PATH=data/checkpoints.db
 
 # Model Configuration (optional)
 # Default: gpt-4o-mini
